--- a/PlayFiles/ConfirmFile.xaml
+++ b/PlayFiles/ConfirmFile.xaml
@@ -7,7 +7,10 @@
         mc:Ignorable="d"
         Title="ConfirmFile" Height="200" Width="300">
     <Grid>
+
         <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
@@ -17,9 +20,14 @@
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
 
-        <TextBlock Grid.Row="0" Grid.Column="0" Margin="10" VerticalAlignment="Center">File time:</TextBlock>
-        <StackPanel Orientation="Horizontal" VerticalAlignment="Center" Grid.ColumnSpan="2" Margin="105,0,10,0">
-            <ComboBox x:Name="HoursComboBox" Width="50" Margin="5" SelectedValue="0">
+        <TextBlock Text="File Name:" Grid.Row="0"/>
+        <TextBox Grid.Row="0" Grid.Column="1" x:Name="FileName"/>
+        <TextBlock Text="File Path:" Grid.Row="1"/>
+        <TextBox Grid.Row="1" Grid.Column="1" x:Name="FilePath"/>
+        
+        <TextBlock Grid.Row="2" Grid.Column="0" Margin="10" VerticalAlignment="Center">File time:</TextBlock>
+        <StackPanel Orientation="Horizontal" VerticalAlignment="Center" Grid.ColumnSpan="2" Margin="105,0,10,0" Grid.Row="2">
+            <ComboBox x:Name="HoursComboBox" Width="50" Margin="5" SelectedIndex="0">
                 <ComboBoxItem Content="0"/>
                 <ComboBoxItem Content="1"/>
                 <ComboBoxItem Content="2"/>
@@ -46,7 +54,7 @@
                 <ComboBoxItem Content="23"/>
             </ComboBox>
             <TextBlock Text=":" VerticalAlignment="Center"/>
-            <ComboBox x:Name="MinutesComboBox" Width="50" Margin="5">
+            <ComboBox x:Name="MinutesComboBox" Width="50" Margin="5" SelectedIndex="0">
                 <ComboBoxItem Content="00"/>
                 <ComboBoxItem Content="01"/>
                 <ComboBoxItem Content="02"/>
@@ -109,7 +117,7 @@
                 <ComboBoxItem Content="59"/>
             </ComboBox>
             <TextBlock Text=":" VerticalAlignment="Center"/>
-            <ComboBox x:Name="SecondsComboBox" Width="50" Margin="5">
+            <ComboBox x:Name="SecondsComboBox" Width="50" Margin="5" SelectedIndex="0">
                 <ComboBoxItem Content="00"/>
                 <ComboBoxItem Content="01"/>
                 <ComboBoxItem Content="02"/>
@@ -173,7 +181,7 @@
             </ComboBox>
         </StackPanel>
 
-        <StackPanel Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Orientation="Horizontal" HorizontalAlignment="Right">
+        <StackPanel Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" Orientation="Horizontal" HorizontalAlignment="Right">
             <Button Name="CancelButton" Content="Cancel" Width="75" Margin="5" Click="CancelButton_Click"/>
             <Button Name="ConfirmButton" Content="Confirm" Width="75" Margin="5" Click="ConfirmButton_Click"/>
         </StackPanel>
