--- a/PlayFiles/ConfirmFile.xaml
+++ b/PlayFiles/ConfirmFile.xaml
@@ -5,10 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PlayFiles"
         mc:Ignorable="d"
-        Title="ConfirmFile" Height="200" Width="300">
+        Title="Confirm File" Height="200" Width="400">
     <Grid>
 
         <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
@@ -22,8 +23,16 @@
 
         <TextBlock Text="File Name:" Grid.Row="0"/>
         <TextBox Grid.Row="0" Grid.Column="1" x:Name="FileName"/>
-        <TextBlock Text="File Path:" Grid.Row="1"/>
-        <TextBox Grid.Row="1" Grid.Column="1" x:Name="FilePath"/>
+        <TextBlock x:Name="FilePathText" Text="File Path:" Grid.Row="1"/>
+        <Grid Grid.Row="1" Grid.Column="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition Width="Auto"/>
+            </Grid.ColumnDefinitions>
+            <TextBox x:Name="FilePath"/>
+            <Button x:Name="ChangePath" Grid.Column="1" Content="Browse" Click="ChangePath_Click" HorizontalAlignment="Left" Width="60"/>
+        </Grid>
+        
         
         <TextBlock Grid.Row="2" Grid.Column="0" Margin="10" VerticalAlignment="Center">File time:</TextBlock>
         <StackPanel Orientation="Horizontal" VerticalAlignment="Center" Grid.ColumnSpan="2" Margin="105,0,10,0" Grid.Row="2">
@@ -181,7 +190,11 @@
             </ComboBox>
         </StackPanel>
 
-        <StackPanel Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" Orientation="Horizontal" HorizontalAlignment="Right">
+        
+        <CheckBox x:Name="OpenOnFullscreen" Grid.Column="0"  Grid.Row="3" HorizontalAlignment="Right" VerticalAlignment="Center" Click="OpenOnFullscreen_Click"/>
+        <Label Content="Open on fullscreen" Grid.Column="1"  Grid.Row="3" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        
+        <StackPanel Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" Orientation="Horizontal" HorizontalAlignment="Right">
             <Button Name="CancelButton" Content="Cancel" Width="75" Margin="5" Click="CancelButton_Click"/>
             <Button Name="ConfirmButton" Content="Confirm" Width="75" Margin="5" Click="ConfirmButton_Click"/>
         </StackPanel>
