--- a/PlayFiles/CloseMedieControl.xaml
+++ b/PlayFiles/CloseMedieControl.xaml
@@ -7,19 +7,29 @@
              mc:Ignorable="d" 
              d:DesignHeight="50" d:DesignWidth="400">
     <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto"/>
-            <ColumnDefinition/>
-        </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
-            <RowDefinition/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-        <Label Content="Close Media" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <ComboBox Grid.Column="1" x:Name="HoursComboBox" Width="Auto" Margin="5" SelectedIndex="2" VerticalAlignment="Center" HorizontalAlignment="Left">
-            <ComboBoxItem Content="When Finished Playing"/>
-            <ComboBoxItem Content="On Time"/>
-            <ComboBoxItem Content="Never"/>
-        </ComboBox>
+        <Grid Grid.Row="0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+            <Label Content="Close Media" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+            <ComboBox Grid.Column="1" x:Name="HoursComboBox" Width="Auto" Margin="5" SelectedIndex="3" VerticalAlignment="Center" HorizontalAlignment="Left">
+                <ComboBoxItem Content="When Finished Playing"/>
+                <ComboBoxItem Content="On Date"/>
+                <ComboBoxItem Content="After Time"/>
+                <ComboBoxItem Content="Never"/>
+            </ComboBox>
+        </Grid>
+        <Grid>
+            
+        </Grid>
     </Grid>
+    
 </UserControl>
