changed close action into an enum

--- a/PlayFiles/CloseMedieControl.xaml
+++ b/PlayFiles/CloseMedieControl.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:PlayFiles"
              mc:Ignorable="d" 
-             d:DesignHeight="50" d:DesignWidth="400">
+             d:DesignHeight="100" d:DesignWidth="400">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -20,16 +20,170 @@
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
             <Label Content="Close Media" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-            <ComboBox Grid.Column="1" x:Name="HoursComboBox" Width="Auto" Margin="5" SelectedIndex="3" VerticalAlignment="Center" HorizontalAlignment="Left">
+            <ComboBox Grid.Column="1" x:Name="CloseWhenComboBox" Width="Auto" Margin="5" SelectedIndex="3" VerticalAlignment="Center" HorizontalAlignment="Left" SelectionChanged="CloseWhenComboBox_SelectionChanged">
                 <ComboBoxItem Content="When Finished Playing"/>
                 <ComboBoxItem Content="On Date"/>
                 <ComboBoxItem Content="After Time"/>
                 <ComboBoxItem Content="Never"/>
             </ComboBox>
         </Grid>
-        <Grid>
-            
+        <Grid x:Name="TimeSelectionGrid" Grid.Row="1">
+            <StackPanel Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="0,0,115,0">
+                <ComboBox
+                    x:Name="HoursComboBox" Width="50" Margin="5" SelectedIndex="0">
+                    <ComboBoxItem Content="0"/>
+                    <ComboBoxItem Content="1"/>
+                    <ComboBoxItem Content="2"/>
+                    <ComboBoxItem Content="3"/>
+                    <ComboBoxItem Content="4"/>
+                    <ComboBoxItem Content="5"/>
+                    <ComboBoxItem Content="6"/>
+                    <ComboBoxItem Content="7"/>
+                    <ComboBoxItem Content="8"/>
+                    <ComboBoxItem Content="9"/>
+                    <ComboBoxItem Content="10"/>
+                    <ComboBoxItem Content="11"/>
+                    <ComboBoxItem Content="12"/>
+                    <ComboBoxItem Content="13"/>
+                    <ComboBoxItem Content="14"/>
+                    <ComboBoxItem Content="15"/>
+                    <ComboBoxItem Content="16"/>
+                    <ComboBoxItem Content="17"/>
+                    <ComboBoxItem Content="18"/>
+                    <ComboBoxItem Content="19"/>
+                    <ComboBoxItem Content="20"/>
+                    <ComboBoxItem Content="21"/>
+                    <ComboBoxItem Content="22"/>
+                    <ComboBoxItem Content="23"/>
+                </ComboBox>
+                <TextBlock Text=":" VerticalAlignment="Center"/>
+                <ComboBox x:Name="MinutesComboBox" Width="50" Margin="5" SelectedIndex="0">
+                    <ComboBoxItem Content="00"/>
+                    <ComboBoxItem Content="01"/>
+                    <ComboBoxItem Content="02"/>
+                    <ComboBoxItem Content="03"/>
+                    <ComboBoxItem Content="04"/>
+                    <ComboBoxItem Content="05"/>
+                    <ComboBoxItem Content="06"/>
+                    <ComboBoxItem Content="07"/>
+                    <ComboBoxItem Content="08"/>
+                    <ComboBoxItem Content="09"/>
+                    <ComboBoxItem Content="10"/>
+                    <ComboBoxItem Content="11"/>
+                    <ComboBoxItem Content="12"/>
+                    <ComboBoxItem Content="13"/>
+                    <ComboBoxItem Content="14"/>
+                    <ComboBoxItem Content="15"/>
+                    <ComboBoxItem Content="16"/>
+                    <ComboBoxItem Content="17"/>
+                    <ComboBoxItem Content="18"/>
+                    <ComboBoxItem Content="19"/>
+                    <ComboBoxItem Content="20"/>
+                    <ComboBoxItem Content="21"/>
+                    <ComboBoxItem Content="22"/>
+                    <ComboBoxItem Content="23"/>
+                    <ComboBoxItem Content="24"/>
+                    <ComboBoxItem Content="25"/>
+                    <ComboBoxItem Content="26"/>
+                    <ComboBoxItem Content="27"/>
+                    <ComboBoxItem Content="28"/>
+                    <ComboBoxItem Content="29"/>
+                    <ComboBoxItem Content="30"/>
+                    <ComboBoxItem Content="31"/>
+                    <ComboBoxItem Content="32"/>
+                    <ComboBoxItem Content="33"/>
+                    <ComboBoxItem Content="34"/>
+                    <ComboBoxItem Content="35"/>
+                    <ComboBoxItem Content="36"/>
+                    <ComboBoxItem Content="37"/>
+                    <ComboBoxItem Content="38"/>
+                    <ComboBoxItem Content="39"/>
+                    <ComboBoxItem Content="40"/>
+                    <ComboBoxItem Content="41"/>
+                    <ComboBoxItem Content="42"/>
+                    <ComboBoxItem Content="43"/>
+                    <ComboBoxItem Content="44"/>
+                    <ComboBoxItem Content="45"/>
+                    <ComboBoxItem Content="46"/>
+                    <ComboBoxItem Content="47"/>
+                    <ComboBoxItem Content="48"/>
+                    <ComboBoxItem Content="49"/>
+                    <ComboBoxItem Content="50"/>
+                    <ComboBoxItem Content="51"/>
+                    <ComboBoxItem Content="52"/>
+                    <ComboBoxItem Content="53"/>
+                    <ComboBoxItem Content="54"/>
+                    <ComboBoxItem Content="55"/>
+                    <ComboBoxItem Content="56"/>
+                    <ComboBoxItem Content="57"/>
+                    <ComboBoxItem Content="58"/>
+                    <ComboBoxItem Content="59"/>
+                </ComboBox>
+                <TextBlock Text=":" VerticalAlignment="Center"/>
+                <ComboBox x:Name="SecondsComboBox" Width="50" Margin="5" SelectedIndex="0">
+                    <ComboBoxItem Content="00"/>
+                    <ComboBoxItem Content="01"/>
+                    <ComboBoxItem Content="02"/>
+                    <ComboBoxItem Content="03"/>
+                    <ComboBoxItem Content="04"/>
+                    <ComboBoxItem Content="05"/>
+                    <ComboBoxItem Content="06"/>
+                    <ComboBoxItem Content="07"/>
+                    <ComboBoxItem Content="08"/>
+                    <ComboBoxItem Content="09"/>
+                    <ComboBoxItem Content="10"/>
+                    <ComboBoxItem Content="11"/>
+                    <ComboBoxItem Content="12"/>
+                    <ComboBoxItem Content="13"/>
+                    <ComboBoxItem Content="14"/>
+                    <ComboBoxItem Content="15"/>
+                    <ComboBoxItem Content="16"/>
+                    <ComboBoxItem Content="17"/>
+                    <ComboBoxItem Content="18"/>
+                    <ComboBoxItem Content="19"/>
+                    <ComboBoxItem Content="20"/>
+                    <ComboBoxItem Content="21"/>
+                    <ComboBoxItem Content="22"/>
+                    <ComboBoxItem Content="23"/>
+                    <ComboBoxItem Content="24"/>
+                    <ComboBoxItem Content="25"/>
+                    <ComboBoxItem Content="26"/>
+                    <ComboBoxItem Content="27"/>
+                    <ComboBoxItem Content="28"/>
+                    <ComboBoxItem Content="29"/>
+                    <ComboBoxItem Content="30"/>
+                    <ComboBoxItem Content="31"/>
+                    <ComboBoxItem Content="32"/>
+                    <ComboBoxItem Content="33"/>
+                    <ComboBoxItem Content="34"/>
+                    <ComboBoxItem Content="35"/>
+                    <ComboBoxItem Content="36"/>
+                    <ComboBoxItem Content="37"/>
+                    <ComboBoxItem Content="38"/>
+                    <ComboBoxItem Content="39"/>
+                    <ComboBoxItem Content="40"/>
+                    <ComboBoxItem Content="41"/>
+                    <ComboBoxItem Content="42"/>
+                    <ComboBoxItem Content="43"/>
+                    <ComboBoxItem Content="44"/>
+                    <ComboBoxItem Content="45"/>
+                    <ComboBoxItem Content="46"/>
+                    <ComboBoxItem Content="47"/>
+                    <ComboBoxItem Content="48"/>
+                    <ComboBoxItem Content="49"/>
+                    <ComboBoxItem Content="50"/>
+                    <ComboBoxItem Content="51"/>
+                    <ComboBoxItem Content="52"/>
+                    <ComboBoxItem Content="53"/>
+                    <ComboBoxItem Content="54"/>
+                    <ComboBoxItem Content="55"/>
+                    <ComboBoxItem Content="56"/>
+                    <ComboBoxItem Content="57"/>
+                    <ComboBoxItem Content="58"/>
+                    <ComboBoxItem Content="59"/>
+                </ComboBox>
+            </StackPanel>
         </Grid>
     </Grid>
-    
+
 </UserControl>
