--- a/PlayFiles/ConfirmFile.xaml
+++ b/PlayFiles/ConfirmFile.xaml
@@ -5,10 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PlayFiles"
         mc:Ignorable="d"
-        Title="Confirm File" Height="200" Width="400">
+        Title="Confirm File" Height="250" Width="400">
     <Grid>
 
         <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
@@ -194,9 +195,11 @@
         
         <CheckBox x:Name="OpenOnFullscreen" Grid.Column="0"  Grid.Row="3" HorizontalAlignment="Right" VerticalAlignment="Center" Click="OpenOnFullscreen_Click"/>
         <Label Content="Open on fullscreen" Grid.Column="1"  Grid.Row="3" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <local:CloseMedieControl x:Name="CloseMediaControl" Grid.Row="4" Grid.Column="1"/>
+        <CheckBox x:Name="FocusOnPlay" Grid.Column="0"  Grid.Row="4" HorizontalAlignment="Right" VerticalAlignment="Center" Click="OpenOnFullscreen_Click"/>
+        <Label Content="Focus media when played" Grid.Column="1"  Grid.Row="4" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <local:CloseMedieControl x:Name="CloseMediaControl" Grid.Row="5" Grid.Column="1"/>
 
-        <StackPanel Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="2" Orientation="Horizontal" HorizontalAlignment="Right">
+        <StackPanel Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="2" Orientation="Horizontal" HorizontalAlignment="Right">
             <Button Name="CancelButton" Content="Cancel" Width="75" Margin="5" Click="CancelButton_Click"/>
             <Button Name="ConfirmButton" Content="Confirm" Width="75" Margin="5" Click="ConfirmButton_Click"/>
         </StackPanel>
