--- a/PlayFiles/MainWindow.xaml
+++ b/PlayFiles/MainWindow.xaml
@@ -14,6 +14,7 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
         <Button
             x:Name="UploadButton"
@@ -47,9 +48,11 @@
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
             <TextBlock x:Name="CurrentTime" Text="Current Time: " Grid.Row="0"/>
-            <StackPanel x:Name="FilesLoadedPanel" Grid.Row="1">
-            </StackPanel>
-            
+            <ScrollViewer Grid.Row="1">
+                <StackPanel x:Name="FilesLoadedPanel" >
+                </StackPanel>
+            </ScrollViewer>
+
             
         </Grid>
         <Grid Grid.Row="4">
@@ -60,6 +63,13 @@
             <Label Content="Keep Screen On" Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Bottom"/>
             <CheckBox Name="KeepScreenOn" Grid.Column="0" HorizontalAlignment="Right" VerticalAlignment="Center" IsChecked="False" Checked="KeepScreenOn_Checked" Unchecked="KeepScreenOn_Unchecked"/>
         </Grid>
-        
+        <Grid Grid.Row="5">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="Auto"/>
+            </Grid.ColumnDefinitions>
+            <Label Content="Hide Cursor When Playing Media" Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Bottom"/>
+            <CheckBox Name="HideCursor" Grid.Column="0" HorizontalAlignment="Right" VerticalAlignment="Center" IsChecked="False" Click="HideCursor_Click"/>
+        </Grid>
     </Grid>
 </Window>
